--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,10 @@ html {
 }
 body {
   background: #eee;
-  padding: 0 16px;
+  
+  background-color: #ebe57c;
+  background-image: url("https://www.transparenttextures.com/patterns/circles.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */  padding: 0 16px;
 }
 
 header {
@@ -67,7 +70,7 @@ footer p {
   outline: none;
 }
 
-form {
+form.create-note {
   position: relative;
   width: 480px;
   margin: 30px auto 20px auto;
@@ -76,8 +79,8 @@ form {
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
-form input,
-form textarea {
+form.create-note input,
+form.create-note textarea {
   width: 100%;
   border: none;
   padding: 4px;
@@ -86,7 +89,7 @@ form textarea {
   font-family: inherit;
   resize: none;
 }
-form button {
+form.create-note button {
   position: absolute;
   right: 18px;
   bottom: -18px;
@@ -97,6 +100,6 @@ form button {
   width: 36px;
   height: 36px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  cursor: pointer !important;
+  cursor: pointer;
   outline: none;
 }
